--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <!-- Game cards will come here -->
     </main>
 
-    <script src="JS/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
