addded confirmation message for cartclearbutton

--- a/cart.html
+++ b/cart.html
@@ -19,6 +19,11 @@
     <main class="game-container" id="cart-container">
         <!-- Cart items here -->
     </main>
+    <div class="cart-summary">
+        <h2>Total: ₹<span id="cart-total">0</span></h2>
+        <button id="clear-cart">Clear Cart</button>
+    </div>
+
 
     <script src="js/cart.js"></script>
 </body>
