created serach order!!

--- a/cart.html
+++ b/cart.html
@@ -51,7 +51,8 @@
             <button id="clear-cart" class="clear-cart-btn">Clear Cart</button>
 
             <!-- Checkout Button -->
-            <button class="checkout-btn" onclick="checkoutitem()">Checkout</button>
+            <button id="placeOrderBtn" class="checkout-btn">Place Order</button>
+
         </div>
 
 
@@ -61,7 +62,7 @@
 
 
 
-
+    <script src="js/storage.js"></script>
     <script src="js/cart.js"></script>
 </body>
 
