--- a/success.html
+++ b/success.html
@@ -5,16 +5,18 @@
     <meta charset="UTF-8">
     <title>Order Success</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
 
-    <div class="success-box">
+    <div class="success-box success-container">
         <h1>🎉 Order Placed Successfully!</h1>
         <p>Thank you for your purchase.</p>
 
-        <button onclick="goToOrders()">View My Orders</button>
-        <button onclick="goToHome()">Continue Shopping</button>
+        <button class="vieworder-btn " onclick="goToOrders()">View My Orders</button>
+        <button class="continue-btn " onclick="goToHome()">Continue Shopping</button>
     </div>
 
     <script>
