--- a/cart.html
+++ b/cart.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>My Cart</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
