--- a/orders.html
+++ b/orders.html
@@ -5,23 +5,33 @@
     <meta charset="UTF-8">
     <title>My Orders</title>
     <link rel="stylesheet" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat:wght@400;500;600;700&display=swap"
+        rel="stylesheet">
+
 </head>
 
+
 <body>
+    <a href="index.html" class="home-btn">🏠 Home</a>
+
 
     <h2 style="text-align:center;margin-top:20px;">📦 My Orders</h2>
-    <input type="text" class="search-input" id="searchInput" placeholder="Search by Order ID..."
-        oninput="searchOrders()" />
+    <input type="text" id="searchInput" placeholder="Search by Order ID..." oninput="searchOrders()" />
 
-    <select class="statusFilter" id="statusFilter" onchange="searchOrders()">
+    <select id="statusFilter" onchange="searchOrders()">
         <option value="">All</option>
         <option value="Placed">Placed</option>
         <option value="Delivered">Delivered</option>
     </select>
 
     <div id="ordersContainer" class="orders-container"></div>
-    <script src="js/storage.js"></script>
-    <script src="js/orders.js"></script>
+
 </body>
 
 </html>
+
+
+
+
+<script src="js/storage.js"></script>
+<script src="js/orders.js"></script>
