completed till updateOrderStatus

--- a/cart.html
+++ b/cart.html
@@ -10,6 +10,15 @@
 </head>
 
 <body>
+    <nav class="navbar">
+        <h2 class="logo">Game Vault</h2>
+        <div class="nav-links">
+            <a href="index.html">Home</a>
+            <a href="cart.html">Cart</a>
+            <a href="orders.html">Orders</a>
+        </div>
+    </nav>
+
 
     <header class="header">
         <h1>🛒 My Cart</h1>
