--- a/index.html
+++ b/index.html
@@ -13,7 +13,18 @@
 
 </head>
 
+
 <body>
+
+    <nav class="navbar">
+        <h2 class="logo">Game Vault</h2>
+        <div class="nav-links">
+
+            <a href="index.html">Home</a>
+            <a href="cart.html">Cart</a>
+            <a href="orders.html">Orders</a>
+        </div>
+    </nav>
 
     <header class="header">
         <div class="game-store-container">
@@ -38,14 +49,14 @@
                 <div class="cart-container">
                     <div class="cart-icon">
                         <img class="cart-img" src="white-shopping-cart-icon-9.jpg">
+                        <span class="cart-count" id="cart-count">0</span>
                     </div>
-                    <span style="color:white" class="cart-count" id="cart-count">0
-                    </span>
-
                 </div>
+
             </a>
         </div>
     </header>
+
 
 
 
