--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
         <div class="game-store-container">
 
             <!-- <img> -->
-            <div class="game-store"> Game Vault
-            </div>
+            <!-- <div class="game-store"> Game Vault
+            </div> -->
 
 
         </div>
